--- a/newsletter.css
+++ b/newsletter.css
@@ -2,6 +2,9 @@ body{
     font-family: "Poiret One", sans-serif;
     font-weight: 400;
     font-style: normal;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .page{
@@ -11,6 +14,7 @@ body{
     justify-content: center;
     gap: 5px;
     padding: 50px;
+    width: 800px;
 }
 
 h1{
